# ai-docs

./: .gitignore  README.md  pyproject.toml
ai_docs/: api.py  extract_repo.py  generate_docs.py
claude/: api.py  download_repo.py  extract_repo.py  generate_docs.py
