[tool.poetry]
name = "claude"
version = "0.1.0"
description = ""
authors = ["Connor (Cub) <connor@cubdigital.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
anthropic = "^0.21.3"
transformers = "^4.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
